[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsa-tracker-mcp"
version = "1.0.0"
description = "MCP server for tracking DSA/LeetCode practice with spaced repetition. Ships with NeetCode 150, supports any custom problem list."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ashmit Raina" }
]
keywords = ["mcp", "model-context-protocol", "leetcode", "neetcode", "dsa", "spaced-repetition", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ashmitrrr/dsa-tracker-mcp-server"
Repository = "https://github.com/ashmitrrr/dsa-tracker-mcp-server"
Issues = "https://github.com/ashmitrrr/dsa-tracker-mcp-server/issues"

[project.scripts]
dsa-tracker-mcp = "dsa_tracker_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dsa_tracker_mcp"]